# PAUL

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  dockerfile  entrypoint.sh  github_utils.py  main.py  pyproject.toml  requirements.txt  resources.md  setup_sympy.sh  swe_patch.txt
.github/workflows/: publish.yml  run-paul.yml
artifacts/PAUL-tests/is_anagram/: patch_0_is_anagram.py  report.txt
artifacts/PAUL-tests/list_deduplicator/: patch_0_list_deduplicator.py  report.txt
artifacts/PAUL-tests/middle_element/: patch_0_list_deduplicator.py  report.txt  (+3 more)
artifacts/QuixBugs-java/: java_artifacts.sh  java_filenames.txt
artifacts/QuixBugs-python/: python_artifacts.sh  python_filenames.txt
artifacts/SWE-bench-Lite/: setup_sympy.sh
artifacts_quixbugs/: breadth_first_search_paul_output.txt  bucketsort_paul_output.txt  depth_first_search_paul_output.txt  detect_cycle_paul_output.txt  flatten_paul_output.txt
artifacts_quixbugs/breadth_first_search/: breadth_first_search.py  breadth_first_search_paul_output.txt
artifacts_quixbugs/bucketsort/: bucketsort.py  bucketsort_paul_output.txt
artifacts_quixbugs/depth_first_search/: depth_first_search.py  depth_first_search_paul_output.txt
artifacts_quixbugs/detect_cycle/: detect_cycle.py  detect_cycle_paul_output.txt
src/paul/: __init__.py  __main__.py  github_utils.py  graph.py  graph_builder.py  models.py  paul.py  pytest_tool.py  react_graph.py  read_numbered_tool.py  runner.py  runner_github.py  runner_local.py  runner_swebench_lite.py  system_message.txt  tool_logger.py  utils.py  workflow.py
(+305 files in other folders)
