[project]
name = "paul"
version = "0.1.0"
description = "PAUL – Patch Automation Using LLMs"
authors = [
    {name = "MikeRaphK",email = "mix.raf.kos@gmail.com"}
]
license = "MIT"
requires-python = ">=3.12, <4.0"
dependencies = [
    "datasets (>=4.0.0,<5.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langgraph (>=0.5.2,<0.6.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pygithub (>=2.6.1,<3.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)"
]

[project.scripts]
paul = "paul.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
